MDEV-10365 - Race condition in error handling of INSERT DELAYED

Shared variables of Delayed_insert may be updated without mutex protection
when delayed insert thread gets an error.

Re-acquire mutex earlier, so that shared variables are protected.